:bug: section spacing bugs

--- a/src/_assets/scss/partials/_service.scss
+++ b/src/_assets/scss/partials/_service.scss
@@ -284,7 +284,7 @@
             @extend .text-darker;
         }
     }
-    #section_8 {
+    #section_7 {
         @extend .pb-5, .pt-0, .mb-4;
 
         > div {
@@ -293,10 +293,10 @@
             transform: translateX(0);
         }
     }
-    #section_9 {
+    #section_8 {
         @extend .pb-0, .mb-0;
     }
-    #section_10 {
+    #section_9 {
         @extend .pb-5, .pt-0, .mb-4;
 
         > div {
